# axon

./: .dockerignore  .gitignore  AGENTS_DEPLOYMENT_COMPLETE.md  ARCHITECTURE_CHANGES.md  AUDIT.md  AXON_ADK_DEPLOYMENT_REPORT.md  AXON_BACKEND_FINAL_REPORT.md  AXON_DO_INTEGRATION_REPORT.md  AXON_GEMINI_COMPLETE_REPORT.md  AXON_PHASE2_REPORT.md  AXON_PHASE3_REPORT.md  CHANGES.md  COMMANDS.md  COMPLETE_IMPLEMENTATION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.md  DIGITALOCEAN_QUICK_REFERENCE.md  DIGITALOCEAN_SETUP_GUIDE.md  DO_INFERENCE_SETUP_COMPLETE.md  DO_INFERENCE_TESTING_GUIDE.md  FILE_TREE.md  FINAL_TEST_REPORT.md  FRONTEND_INTEGRATION_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  NATIVE_GRADIENT_UPGRADE.md  PHASE3_BEFORE_AFTER_COMPARISON.md  QUICKSTART_GEMINI.md  README.md  README_DO_INFERENCE.md  README_GEMINI_INTEGRATION.md  audit.txt  colors.css  current_audit.md  docker-compose.yml  qdrant-report.md
backend/: .env.example  alembic.ini  analyze_dependencies.py  generate_report.py  pyproject.toml  requirements.txt  start.py
backend/alembic/: env.py
backend/analysis/: DEPENDENCY_ANALYSIS.json  DEPENDENCY_GRAPH.json  GRAPH_VISUALIZATION.json  analyze_dependencies.py  generate_graph.py  generate_report.py  index.html
backend/scripts/: README_TEST.md  debug_response.py  quick_test_do_inference.py  run_agent_evaluation.py  test_automatic_evolution.py  test_do_inference.py  test_evolution_e2e.py  test_evolution_skill_generation.py  test_full_agent_flow.py  test_full_integration.py  test_gemini_connection.py  (+12 more)
(+304 files in other folders)
