[project]
name = "axon-backend"
version = "0.1.0"
description = "AXON FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy>=2",
  "asyncpg",
  "alembic",
  "python-dotenv",
  "pydantic-settings",
  "httpx",
  "tenacity",
  "orjson",
  "loguru",
  "chromadb",
  "sentence-transformers",
  "qdrant-client"
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "mypy",
  "ruff"
]
